fondamentalmente eliminati dei refusi da index.html e test/*, cominciata revisione sezione .our-offer di test/index.html

--- a/test/css/style.css
+++ b/test/css/style.css
@@ -1,10 +1,4 @@
-.container::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-nav li {
+header nav li {
     display: inline-block;
 
 }
